--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Zamy97/Node.js-Express-From-Scratch#readme",
   "dependencies": {
     "express": "^4.16.3",
+    "mongoose": "^5.3.2",
     "pug": "^2.0.3"
   }
 }
