--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
+    "jQuery": "^1.7.4",
     "mongoose": "^5.3.2",
     "pug": "^2.0.3"
   }
